[package]
name = "bevy1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13"
bevy_editor_pls = "0.8.0"
futures-lite = "2.1.0"
noisy_bevy = "0.6.0"
profiling = "1.0.13"
rand = "0.8.5"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 3
